# Agent2Agent_A2A_Protocol

./: README.md  pyproject.toml
a2a_samples/client/: time_client.py
a2a_samples/server/: tell_time_server.py
a2a_simple/: __main__.py  agent_executor.py  readme_a2a_simple.md  test_client.py
