[project]
name = "projeto-a2a"
version = "0.1.0"
description = "Aqui vamos a aprender como AGENTES de diferentes empresas podem se cominucar através do A2A"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.10",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
